--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 <head>
 
     <!-- CSS (load bootstrap) -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <link href="css/style.css" rel="stylesheet" media="screen" id="customStyle">
 
 
@@ -16,226 +19,85 @@
 </head>
 
 <!-- apply our angular app to our site -->
-<body ng-app="routerApp">
+<body>
+
+      <div class="page-header">
+          <h1>INDY IMAGINING INC.<small>Wholesale to Sign Industry</small></h1>
+      </div>
 
 <!-- NAVIGATION -->
-<nav class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
-  <div class="container-fluid">
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarCollapse">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="#">Tutorial Republic</a>
-  </div>
-  <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse" id="navbarCollapse">
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#" target="_blank">Home</a></li>
-      <li><a href="#" target="_blank">About</a></li>
-      <li><a href="#" target="_blank">Contact</a></li>
-    </ul>
-  </div>
-</div>
+<nav id="myNavbar" class="navbar navbar-default navbar-inverse " role="navigation">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarCollapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">David Steele's Learning A Lot</a>
+          </div>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="http://localhost/octo-barnacle/" target="_self"><span class="glyphicon glyphicon-home"> Home</a></span></li>
+              <li><a href="http://localhost/octo-barnacle/pages/about.html" target="_self"><span class="glyphicon glyphicon-question-sign"> About</a></span></li>
+              <li><a href="http://localhost/octo-barnacle/pages/contact.html" target="_self"><span class="glyphicon glyphicon-usd"> Contact</a></span></li>
+            </ul>
+          </div>
+      </div>
 </nav>
 
-<!-- MAIN CONTENT -->
-<div class="container-fluid">
-	<div class="jumbotron">
-		<h1>You Can Learn to Create Websites Like This One</h1>
-		<p>We can put some text here or whatever. The bottom of the page is where I practiced understanding the responsive grid system.</p>
-		<p><a href="#" target="_blank" class="btn btn-success btn-lg">Get started today</a></p>
-	</div>
-	<div class="row">
-		<div class="col-xs-4">
-			<h2>HTML</h2>
-			<p>HTML is what I created this page with there is no CSS yet except what is default for Bootstrap</p>
-			<p><a href="#" target="_blank" class="btn btn-success">Learn More &raquo;</a></p>
-		</div>
-		<div class="col-xs-4">
-			<h2>CSS</h2>
-			<p>CSS is gonna be used but not yet...</p>
-			<p><a href="#" target="_blank" class="btn btn-success">Learn More &raquo;</a></p>
-		</div>
-		<div class="col-xs-4">
-			<h2>Bootstrap</h2>
-			<p>Bootstrap is pretty cool really!!!</p>
-			<p><a href="#" target="_blank" class="btn btn-success">Learn More &raquo;</a></p>
-		</div>
-	</div>
-	<hr>
-	<div class="row">
-		<div class="col-xs-12">
-			<footer>
-				<p>&copy; Copyright 2015 David Steele</p>
-			</footer>
-		</div>
-	</div>
-</div>
-<div class="container-fluid" id="davetainer1">
-    <!--Row with two equal columns-->
-    <div class="row">
-        <div class="col-xs-6">something here1</div>
-        <div class="col-xs-6">something here1</div>
-    </div>
-
-    <!--Row with two columns divided in 1:2 ratio-->
-    <div class="row">
-        <div class="col-xs-4">something here2</div>
-        <div class="col-xs-8">something here2</div>
-    </div>
-
-    <!--Row with two columns divided in 1:3 ratio-->
-    <div class="row">
-        <div class="col-xs-3">something here3</div>
-        <div class="col-xs-9">something here3</div>
-    </div>
-
-    <br>
-
-    <div class="container-fluid" id="davetainer2">
-        <!--Row with two equal columns-->
-        <div class="row">
-            <div class="col-sm-6">something here1</div>
-            <div class="col-sm-6">something here1</div>
-        </div>
-
-        <!--Row with two columns divided in 1:2 ratio-->
-        <div class="row">
-            <div class="col-sm-4">something here2</div>
-            <div class="col-sm-8">something here2</div>
-        </div>
-
-        <!--Row with two columns divided in 1:3 ratio-->
-        <div class="row">
-            <div class="col-sm-3">something here3</div>
-            <div class="col-sm-9">something here3</div>
-        </div>
-    </div>
-
-        <br>
-
-    <div class="container-fluid" id="davetainer3">
-        <!--Row with three equal columns-->
-        <div class="row">
-          <div class="col-md-4">something here1</div>
-          <div class="col-md-4">something here1</div>
-          <div class="col-md-4">something here1</div>
-        </div>
-
-        <!--Row with three columns divided in 1:4:1 ratio-->
-        <div class="row">
-          <div class="col-md-2">something here2</div>
-          <div class="col-md-8">something here2</div>
-          <div class="col-md-2">something here2</div>
-        </div>
-
-        <!--Row with three columns divided unevenly-->
-        <div class="row">
-          <div class="col-md-3">something here3</div>
-          <div class="col-md-7">something here3</div>
-          <div class="col-md-2">something here3</div>
-        </div>
-    </div>
-
-    <br>
-
-    <div class="container-fluid">
-        <div class="row">
-          <div class="col-sm-3 col-md-2">something here1</div>
-          <div class="col-sm-9 col-md-8">something here2</div>
-          <div class="col-sm-12 col-md-2">something here3</div>
-        </div>
-   </div>
-
-   <br>
-
-   <div class="container-fluid">
-     <div class="row">
-        <div class="col-sm-6 col-md-4"><p>something here1 <br><br>something here1 <br>something here1</p></div>
-        <div class="col-sm-6 col-md-4"><p>something here2 something here2 something here2</p></div>
-        <div class="clearfix visible-sm-block"></div>
-        <div class="col-sm-6 col-md-4"><p>something here3 something <br>here3 something here3</p></div>
-        <div class="clearfix visible-md-block"></div>
-        <div class="col-sm-6 col-md-4"><p>something here4 something here4</p></div>
-        <div class="clearfix visible-sm-block"></div>
-        <div class="clearfix visible-lg-block"></div>
-        <div class="col-sm-6 col-md-4"><p>something here5 something here5</p></div>
-        <div class="col-sm-6 col-md-4"><p>something here6 something here6</p></div>
-        <div class="clearfix visible-sm-block"></div>
-        <div class="clearfix visible-md-block"></div>
-        <div class="col-sm-6 col-md-4"><p>something here7 <br>something here7</p></div>
-        <div class="col-sm-6 col-md-4"><p>something here8 something here8</p></div>
-        <div class="clearfix visible-sm-block"></div>
-        <div class="clearfix visible-lg-block"></div>
-        <div class="col-sm-6 col-md-4"><p>something here9 something here9 <br>something here9 <br>something here9 something here9</p></div>
-        <div class="clearfix visible-md-block"></div>
-        <div class="col-sm-6 col-md-4"><p>something here10 something here10<br>something here10 something here10</p></div>
-        <div class="clearfix visible-sm-block"></div>
-        <div class="col-sm-6 col-md-4"><p>something here11 something here11 something here11</p></div>
-        <div class="col-sm-6 col-md-4"><p>something here12 something here12</p></div>
-    </div>
-  </div>
-
-  <br>
-
-  <div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-6 col-md-4 col-lg-3"><p>Box 1</p></div>
-        <div class="col-sm-6 col-md-4 col-lg-3"><p>Box 2</p></div>
-        <div class="clearfix visible-sm-block"></div>
-        <div class="col-sm-6 col-md-4 col-lg-3"><p>Box 3</p></div>
-        <div class="clearfix visible-md-block"></div>
-        <div class="col-sm-6 col-md-4 col-lg-3"><p>Box 4</p></div>
-        <div class="clearfix visible-sm-block"></div>
-        <div class="clearfix visible-lg-block"></div>
-        <div class="col-sm-6 col-md-4 col-lg-3"><p>Box 5</p></div>
-        <div class="col-sm-6 col-md-4 col-lg-3"><p>Box 6</p></div>
-        <div class="clearfix visible-sm-block"></div>
-        <div class="clearfix visible-md-block"></div>
-        <div class="col-sm-6 col-md-4 col-lg-3"><p>Box 7</p></div>
-        <div class="col-sm-6 col-md-4 col-lg-3"><p>Box 8</p></div>
-        <div class="clearfix visible-sm-block"></div>
-        <div class="clearfix visible-lg-block"></div>
-        <div class="col-sm-6 col-md-4 col-lg-3"><p>Box 9</p></div>
-        <div class="clearfix visible-md-block"></div>
-        <div class="col-sm-6 col-md-4 col-lg-3"><p>Box 10</p></div>
-        <div class="clearfix visible-sm-block"></div>
-        <div class="col-sm-6 col-md-4 col-lg-3"><p>Box 11</p></div>
-        <div class="col-sm-6 col-md-4 col-lg-3"><p>Box 12</p></div>
-    </div>
-</div>
-
-<br>
-
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-4">something else here1</div>
-        <div class="col-sm-8">something else here2</div>
+<div class="container">
+    <div class="jumbotron">
+      <h1>You Can Learn to Create Websites Like This One</h1>
+      <p>We can put some text here or whatever. The bottom of the page is where I practiced understanding the responsive grid system.</p>
+      <p><a href="#" target="_self" class="btn btn-success btn-lg">Get started today</a></p>
     </div>
     <div class="row">
-        <div class="col-sm-8 col-sm-offset-3">something else here1-1</div>
+        <div class="col-sm-6 col-md-4 col-lg-2">
+          <h2>HTML</h2>
+          <p class="lead">HTML is what I created this page with there is no CSS yet except what is default for Bootstrap</p>
+          <p><a href="#" target="_self" class="btn btn-success">Learn More &raquo;</a></p>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-2">
+          <h2>CSS</h2>
+          <p>CSS is gonna be used but not yet...</p>
+          <p><a href="#" target="_self" class="btn btn-success">Learn More &raquo;</a></p>
+        </div>
+        <div class="clearfix visible-sm-block"></div>
+        <div class="col-sm-6 col-md-4 col-lg-2">
+          <h2>Bootstrap</h2>
+          <p>Bootstrap is pretty cool really!!!</p>
+          <p><a href="#" target="_self" class="btn btn-success">Learn More &raquo;</a></p>
+        </div>
+        <div class="clearfix visible-md-block"></div>
+        <div class="col-sm-6 col-md-4 col-lg-2">
+          <h2>References</h2>
+          <p>The references section outlines all the standard HTML tags and CSS properties along with other useful references such as color names and values, symbols and character entities, web safe fonts, language codes, HTTP messages and much more.</p>
+          <p><a href="#" target="_self" class="btn btn-success">Learn More &raquo;</a></p>
+        </div>
+        <div class="clearfix visible-sm-block"></div>
+        <div class="col-sm-6 col-md-4 col-lg-2">
+          <h2>Examples</h2>
+          <p>The examples section encloses an extensive collection of examples on various topic that you can try and test yourself using online HTML editor.</p>
+          <p><a href="#" target="_self" class="btn btn-success">Learn More &raquo;</a></p>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-2">
+          <h2>FAQ</h2>
+          <p>The collection of Frequently Asked Questions (FAQ) provides brief answers to many common questions related to web design and development.</p>
+          <p><a href="#" target="_self" class="btn btn-success">Learn More &raquo;</a></p>
+        </div>
     </div>
-</div>
-
-<br>
-
-<div class="container-fluid">
+    <hr>
     <div class="row">
         <div class="col-sm-12">
-            <!--Nested row within a column-->
-            <div class="row">
-                <div class="col-xs-4 col-sm-6">something else here1</div>
-
-                <div class="col-xs-8 col-sm-6">something else here2</div>
-
-            </div>
+            <footer>
+                <p><span class="glyphicon glyphicon-copyright-mark"></span> Copyright 2015 David Steele</p>
+            </footer>
         </div>
     </div>
 </div>
-
-
 </body>
 </html>
